--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,1 +1,24 @@
-/* No CSS *//*# sourceMappingURL=estilos.css.map */
+body {
+  margin: 0;
+}
+
+header {
+  background-color: #000;
+  display: flex;
+  justify-content: space-between;
+}
+header div ol {
+  display: flex;
+  margin-top: 12px;
+  margin-bottom: 0;
+}
+header div ol li {
+  margin-left: 8px;
+}
+header div ol li a {
+  text-decoration: none;
+  color: white;
+  margin-right: 7px;
+}
+
+/*# sourceMappingURL=estilos.css.map */
