--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,26 +1,3 @@
-$Color-header: #000;
-
-body {
-    margin: 0;
-}
-
-header {
-    background-color: $Color-header;
-    display: flex;
-    justify-content: space-between;
-    div {
-        ol {
-            display: flex;
-            margin-top: 12px;
-            margin-bottom: 0;
-            li {
-                margin-left: 8px;
-                a {
-                    text-decoration: none;
-                    color: white;
-                    margin-right: 7px;
-                }
-            }
-        }
-    }
-}
+@import '_body';
+@import '_header';
+@import '_hero';
