--- a/sass/_mundo.scss
+++ b/sass/_mundo.scss
@@ -11,6 +11,7 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
         justify-items: center;
+        background-color: gray;
 
         div {
             img {
