--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,7 +49,7 @@ header div ol li a {
 }
 
 .mundo {
-  display: inline;
+  display: none;
 }
 .mundo .ciudades {
   display: grid;
@@ -77,6 +77,12 @@ footer div {
 }
 footer div p {
   color: white;
+}
+
+.boton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=estilos.css.map */
