--- a/sass/_iconos.scss
+++ b/sass/_iconos.scss
@@ -3,5 +3,5 @@
     justify-content: space-evenly;
     align-items: center;
     font-size: 60px;
-    background-color: gray;
+    background-color: rgba($color: black, $alpha: .1);
 }
