--- a/sass/_mundo.scss
+++ b/sass/_mundo.scss
@@ -11,7 +11,7 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
         justify-items: center;
-        background-color: gray;
+        background-color: rgba($color: black, $alpha: .1);
 
         div {
             img {
