--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -9,4 +9,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba($color: black, $alpha: .1);
+    #mostrar {
+        background: black;
+        color: white;
+        padding: 20px;
+            margin: 25px auto;
+            font-family: 'OpenSansBold', sans-serif;
+            font-size: 14px;
+            font-weight: bold;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            display: block;
+            text-align: center;
+            cursor: pointer;
+            width: 300px;
+            box-shadow: inset 0 0 0 0 white;
+            -webkit-transition: all ease 0.8s;
+            -moz-transition: all ease 0.8s;
+            transition: all ease 0.8s;
+    }
+
+    #mostrar:hover {
+        box-shadow: inset 0 -70px 0 0 white;
+        color: black;
+    }
 }
